src/styles/global.css
@import 'tailwindcss';
@plugin '@tailwindcss/typography';

@theme {
	--animate-fade-up: fade-up 1000ms;

	@keyframes fade-up {
		0% {
			opacity: 0;
			transform: translateY(30px);
		}
		100% {
			opacity: 1;
			transform: translateY(0);
		}
	}
}

* {
	scrollbar-color: hsla(250, 14%, 80%, 1) transparent;
}

::-webkit-scrollbar,
::-webkit-scrollbar-track {
	background-color: transparent;
}

::-webkit-scrollbar-thumb {
	background-color: hsla(250, 14%, 80%, 1);
	border: 4px solid transparent;
	background-clip: content-box;
	border-radius: 10px;
}

html {
	height: 100%;
	scrollbar-gutter: stable;
}

body {
	min-height: 100%;
	-webkit-font-smoothing: antialiased;
	text-rendering: optimizeLegibility;
	overflow-wrap: break-word;
}

.astro-code,
html.dark .astro-code {
	font-weight: 600 !important;
}

html.dark .astro-code,
html.dark .astro-code span {
	color: var(--shiki-dark) !important;
	background-color: var(--shiki-dark-bg) !important;
	/* Optional, if you also want font styles */
	font-style: var(--shiki-dark-font-style) !important;
	/* font-weight: var(--shiki-dark-font-weight) !important; */
	text-decoration: var(--shiki-dark-text-decoration) !important;
}

